implement authorization functionality
